--- a/study-notes.html
+++ b/study-notes.html
@@ -95,7 +95,7 @@
       <div class="content-content">
         <h1>JavaScript学习笔记</h1>
         <p>
-          通过《JavaScript高级程序设计》第四版和MDN进行学习。记录要点和学习心得。
+          通过《JavaScript高级程序设计》第四版和Mozilla MDN Web Docs进行学习。<br>记录要点和学习心得。
         </p>
       </div>
 
