--- a/study-notes.html
+++ b/study-notes.html
@@ -35,18 +35,18 @@
           <a href="study-notes.html">
             <div class="unhome-focused unhome-choice">学习笔记</div>
           </a>
-          <a href="">
+          <a href="skills.html">
             <div class="unhome-choice">专业技能</div>
           </a>
-          <a href="">
+          <a href="projects.html">
             <div class="unhome-choice">项目经历</div>
           </a>
-          <a href="">
+          <a href="about.html">
             <div class="unhome-choice">关于本站</div>
           </a>
           <!-- github logo -->
           <a href="https://github.com/zanlaihu">
-            <div class="github"></div>
+            <div class="github github-black"></div>
           </a>
         </div>
       </div>
