--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
           <a href="study-notes.html">
             <div class="choice">学习笔记</div>
           </a>
-          <a href="">
+          <a href="skills.html">
             <div class="choice">专业技能</div>
           </a>
-          <a href="">
+          <a href="projects.html">
             <div class="choice">项目经历</div>
           </a>
-          <a href="">
+          <a href="about.html">
             <div class="choice">关于本站</div>
           </a>
           <!-- github logo -->
           <a href="https://github.com/zanlaihu">
-            <div class="github"></div>
+            <div class="github github-white"></div>
           </a>
         </div>
       </div>
