调整响应式

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <div class="news">
       <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
+        ❤️❤️❤️小站初建成，有bug还请多见谅！请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
       </div>
     </div>
 
@@ -61,22 +61,16 @@
             <div class="ins-news-title">小破站的艰辛建站史</div>
             <div class="ins-arrow"></div>
           </div>
-
-            <div class="ins-title">因为兴趣使然而建立的小站</div>
-            <div class="ins-ins">
-              用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
-            </div>
-            <div class="ins-search"></div>
+          <div class="ins-title">因为兴趣使然而建立的小站</div>
+          <div class="ins-ins">
+            用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
           </div>
-          <div class="ins-search"></div>
         </div>
-        <div class="ins-right"></div>
       </div>
     </div>
 
-    <!-- 往期热点 -->
     <div class="hot"></div>
-
+    <!-- bottom -->
     <div class="bottom">
       <div class="bottom-contact">
         <div class="contact-title">联系方式</div>
