增加了mobile端的导航栏

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <div class="github github-white"></div>
           </a>
         </div>
+        <div class="mobile-nav"></div>
       </div>
     </div>
 
@@ -85,6 +86,10 @@
       <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
   </div>
+
+  <!-- JavaScript -->
+  <script src="assets/js/jquery-3.6.0.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
