添加了弹出navi

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             <div class="github github-white"></div>
           </a>
         </div>
-        <div class="mobile-nav"></div>
+        <div class="mobile-nav-control"></div>
       </div>
+      <!-- 弹出式导航 -->
+      <div class="mobile-nav"></div>
     </div>
 
     <!-- 首页的彩色背景介绍 -->
@@ -75,8 +77,6 @@
     <div class="bottom">
       <div class="bottom-contact">
         <div class="contact-title">联系方式</div>
-        <div class="contact-message">手机：13867908869</div>
-        <div class="contact-message">微信：13867908869</div>
         <div class="contact-message">邮箱：klaus@outlook.com</div>
       </div>
       <div class="bottom-line"></div>
@@ -89,7 +89,7 @@
 
   <!-- JavaScript -->
   <script src="assets/js/jquery-3.6.0.min.js"></script>
-  <script src="main.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
