取消了主页的news

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body class="body-style">
   <div>
     <!-- Header -->
-    <div class="news">
+    <!-- <div class="news">
       <div class="news-text">
         ❤️❤️❤️小站初建成，有bug还请多见谅！请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
       </div>
-    </div>
+    </div> -->
 
     <!-- header -->
     <div class="navigation">
@@ -51,9 +51,10 @@
         </div>
         <div class="mobile-nav-control"></div>
       </div>
-      <!-- 弹出式导航 -->
-      <div class="mobile-nav"></div>
     </div>
+
+    <!-- 弹出式导航 -->
+    <div class="mobile-nav"></div>
 
     <!-- 首页的彩色背景介绍 -->
     <div class="home-ins">
@@ -72,7 +73,7 @@
       </div>
     </div>
 
-    <div class="hot"></div>
+    <!-- <div class="hot"></div> -->
     <!-- bottom -->
     <div class="bottom">
       <div class="bottom-contact">
