--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
 
 <body class="body-style">
   <div>
-    <!-- Header -->
-    <!-- <div class="news">
-      <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
-      </div>
-    </div> -->
-
-    <!-- header -->
+    <!-- 标题栏 -->
     <div class="navigation">
       <div class="navigation-content">
         <!-- 宇航员 -->
