--- a/index.html
+++ b/index.html
@@ -47,7 +47,23 @@
     </div>
 
     <!-- 弹出式导航 -->
-    <div class="mobile-nav"></div>
+    <div class="mobile-nav">
+      <a href="index.html">
+        <div class="mobile-nav-choice">主页</div>
+      </a>
+      <a href="study-notes.html">
+        <div class="mobile-nav-choice">学习笔记</div>
+      </a>
+      <a href="skills.html">
+        <div class="mobile-nav-choice">专业技能</div>
+      </a>
+      <a href="projects.html">
+        <div class="mobile-nav-choice">项目经历</div>
+      </a>
+      <a href="about.html">
+        <div class="mobile-nav-choice">关于本站</div>
+      </a>
+    </div>
 
     <!-- 首页的彩色背景介绍 -->
     <div class="home-ins">
