算是做好弹出navigation了

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
       <a href="about.html">
         <div class="mobile-nav-choice">关于本站</div>
       </a>
+      <div class="mobile-nav-bottom">
+        <div class="mobile-nav-bottom-line"></div>
+      </div>
     </div>
 
     <!-- 首页的彩色背景介绍 -->
