--- a/index.html
+++ b/index.html
@@ -11,16 +11,36 @@
 
 <body class="body-style">
   <div>
-    <!-- 标题栏 -->
+    <div class="news">
+      <div class="news-text">6月12日：小站刚建成，有bug还请多见谅。</div>
+    </div>
     <div class="navigation">
+      <div class="dropdown"></div>
+    </div>
+    <!-- home-ins -->
+    <div class="home-ins">
+      <div class="ins-content">
+        <div class="ins-left">
+          <div class="ins-news">
+            <div class="ins-news-logo">最新</div>
+            <div class="ins-news-title">小破站的艰辛建站史</div>
+            <div class="ins-arrow"></div>
+          </div>
+          <div class="ins-title">因为兴趣使然而建立的小站</div>
+          <div class="ins-ins">
+            用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 标题栏 -->
+    <!-- <div class="navigation">
       <div class="navigation-content">
-        <!-- 宇航员 -->
+
         <div class="profile">
           <div class="profile-pic"></div>
         </div>
-        <!-- 名字 -->
         <div class="logo logo1">Hu <br />Zanlai</div>
-        <!-- 导航 -->
         <div class="navigation-choice">
           <a href="index.html">
             <div class="choice choice-focused">主页</div>
@@ -37,17 +57,16 @@
           <a href="about.html">
             <div class="choice">关于本站</div>
           </a>
-          <!-- github logo -->
           <a href="https://github.com/zanlaihu">
             <div class="github github-white"></div>
           </a>
         </div>
         <div class="mobile-nav-control"></div>
       </div>
-    </div>
+    </div> -->
 
     <!-- 弹出式导航 -->
-    <div class="mobile-nav">
+    <!-- <div class="mobile-nav">
       <a href="index.html">
         <div class="mobile-nav-choice">主页</div>
       </a>
@@ -66,24 +85,9 @@
       <div class="mobile-nav-bottom">
         <div class="mobile-nav-bottom-line"></div>
       </div>
-    </div>
+    </div> -->
 
-    <!-- 首页的彩色背景介绍 -->
-    <div class="home-ins">
-      <div class="ins-content">
-        <div class="ins-left">
-          <div class="ins-news">
-            <div class="ins-news-logo">最新</div>
-            <div class="ins-news-title">小破站的艰辛建站史</div>
-            <div class="ins-arrow"></div>
-          </div>
-          <div class="ins-title">因为兴趣使然而建立的小站</div>
-          <div class="ins-ins">
-            用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
-          </div>
-        </div>
-      </div>
-    </div>
+
 
     <!-- <div class="hot"></div> -->
     <!-- bottom -->
@@ -93,16 +97,13 @@
         <div class="contact-message">邮箱：klaus@outlook.com</div>
       </div>
       <div class="bottom-line"></div>
-      <div class="bottom-logo">
-        <div class="profile-pic"></div>
-      </div>
       <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
   </div>
 
   <!-- JavaScript -->
   <script src="assets/js/jquery-3.6.0.min.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/test.js"></script>
 </body>
 
 </html>
