添加自定义字体

--- a/index.html
+++ b/index.html
@@ -1,46 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
-
-<body class="body-style">
-  <div>
-    <div class="news">
-      <div class="news-text">6月12日：小站刚建成，有bug还请多见谅。</div>
-    </div>
-    <div class="navigation">
-      <div class="dropdown"></div>
-    </div>
-    <!-- home-ins -->
-    <div class="home-ins">
-      <div class="ins-content">
-        <div class="ins-left">
-          <div class="ins-news">
-            <div class="ins-news-logo">最新</div>
-            <div class="ins-news-title">小破站的艰辛建站史</div>
-            <div class="ins-arrow"></div>
-          </div>
-          <div class="ins-title">因为兴趣使然而建立的小站</div>
-          <div class="ins-ins">
-            用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
-          </div>
-        </div>
+  <body class="body-style">
+    <div>
+      <div class="news">
+        <div class="news-text">6月12日：小站刚建成，有bug还请多见谅。</div>
       </div>
-    </div>
-    <!-- 标题栏 -->
-    <!-- <div class="navigation">
-      <div class="navigation-content">
-
-        <div class="profile">
-          <div class="profile-pic"></div>
-        </div>
-        <div class="logo logo1">Hu <br />Zanlai</div>
+      <div class="navigation">
+        <div class="logo">Hu</div>
         <div class="navigation-choice">
           <a href="index.html">
             <div class="choice choice-focused">主页</div>
@@ -61,12 +38,39 @@
             <div class="github github-white"></div>
           </a>
         </div>
+        <div class="dropdown"></div>
+      </div>
+      <!-- home-ins -->
+      <div class="home-ins">
+        <div class="ins-content">
+          <div class="ins-left">
+            <div class="ins-news">
+              <div class="ins-news-logo">最新</div>
+              <div class="ins-news-title">小破站的艰辛建站史</div>
+              <div class="ins-arrow"></div>
+            </div>
+            <div class="ins-title">因为兴趣使然而建立的小站</div>
+            <div class="ins-ins">
+              用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 标题栏 -->
+      <!-- <div class="navigation">
+      <div class="navigation-content">
+
+        <div class="profile">
+          <div class="profile-pic"></div>
+        </div>
+        <div class="logo logo1">Hu <br />Zanlai</div>
+
         <div class="mobile-nav-control"></div>
       </div>
     </div> -->
 
-    <!-- 弹出式导航 -->
-    <!-- <div class="mobile-nav">
+      <!-- 弹出式导航 -->
+      <!-- <div class="mobile-nav">
       <a href="index.html">
         <div class="mobile-nav-choice">主页</div>
       </a>
@@ -87,23 +91,20 @@
       </div>
     </div> -->
 
-
-
-    <!-- <div class="hot"></div> -->
-    <!-- bottom -->
-    <div class="bottom">
-      <div class="bottom-contact">
-        <div class="contact-title">联系方式</div>
-        <div class="contact-message">邮箱：klaus@outlook.com</div>
+      <!-- <div class="hot"></div> -->
+      <!-- bottom -->
+      <div class="bottom">
+        <div class="bottom-contact">
+          <div class="contact-title">联系方式</div>
+          <div class="contact-message">邮箱：klaus@outlook.com</div>
+        </div>
+        <div class="bottom-line"></div>
+        <div class="bottom-label">Made with ❤️ by Zanlai.</div>
       </div>
-      <div class="bottom-line"></div>
-      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
-  </div>
 
-  <!-- JavaScript -->
-  <script src="assets/js/jquery-3.6.0.min.js"></script>
-  <script src="assets/js/test.js"></script>
-</body>
-
+    <!-- JavaScript -->
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
