--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   </head>
 
   <body class="body-style">
-    <div>
-      <div class="news">
-        <div class="news-text">6月12日：小站刚建成，有bug还请多见谅。</div>
-      </div>
-      <div class="navigation">
+    <div class="news">
+      <div class="news-text">6月12日：小站刚建成，有bug还请多见谅。</div>
+    </div>
+    <div class="navigation">
+      <div class="navigation-content">
         <div class="logo">Hu</div>
         <div class="navigation-choice">
           <a href="index.html">
@@ -38,26 +38,28 @@
             <div class="github github-white"></div>
           </a>
         </div>
-        <div class="dropdown"></div>
       </div>
-      <!-- home-ins -->
-      <div class="home-ins">
-        <div class="ins-content">
-          <div class="ins-left">
-            <div class="ins-news">
-              <div class="ins-news-logo">最新</div>
-              <div class="ins-news-title">小破站的艰辛建站史</div>
-              <div class="ins-arrow"></div>
-            </div>
-            <div class="ins-title">因为兴趣使然而建立的小站</div>
-            <div class="ins-ins">
-              用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
-            </div>
+
+      <div class="dropdown"></div>
+    </div>
+    <!-- home-ins -->
+    <div class="home-ins">
+      <div class="ins-content">
+        <div class="ins-left">
+          <div class="ins-news">
+            <div class="ins-news-logo">最新</div>
+            <div class="ins-news-title">小破站的艰辛建站史</div>
+            <div class="ins-arrow"></div>
+          </div>
+          <div class="ins-title">因为兴趣使然而建立的小站</div>
+          <div class="ins-ins">
+            用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
           </div>
         </div>
       </div>
-      <!-- 标题栏 -->
-      <!-- <div class="navigation">
+    </div>
+    <!-- 标题栏 -->
+    <!-- <div class="navigation">
       <div class="navigation-content">
 
         <div class="profile">
@@ -69,8 +71,8 @@
       </div>
     </div> -->
 
-      <!-- 弹出式导航 -->
-      <!-- <div class="mobile-nav">
+    <!-- 弹出式导航 -->
+    <!-- <div class="mobile-nav">
       <a href="index.html">
         <div class="mobile-nav-choice">主页</div>
       </a>
@@ -91,16 +93,15 @@
       </div>
     </div> -->
 
-      <!-- <div class="hot"></div> -->
-      <!-- bottom -->
-      <div class="bottom">
-        <div class="bottom-contact">
-          <div class="contact-title">联系方式</div>
-          <div class="contact-message">邮箱：klaus@outlook.com</div>
-        </div>
-        <div class="bottom-line"></div>
-        <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+    <!-- <div class="hot"></div> -->
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaus@outlook.com</div>
       </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
 
     <!-- JavaScript -->
