增加了会旋转的按钮

--- a/index.html
+++ b/index.html
@@ -38,9 +38,43 @@
             <div class="github github-white"></div>
           </a>
         </div>
+        <div class="inner-header-icon">
+          <span></span>
+          <span></span>
+        </div>
       </div>
 
-      <div class="dropdown"></div>
+      <div class="dropdown">
+        <!-- <div class="mobile-nav">
+          <a href="index.html">
+            <div class="mobile-nav-choice">主页</div>
+          </a>
+          <a href="study-notes.html">
+            <div class="mobile-nav-choice">学习笔记</div>
+          </a>
+          <a href="skills.html">
+            <div class="mobile-nav-choice">专业技能</div>
+          </a>
+          <a href="projects.html">
+            <div class="mobile-nav-choice">项目经历</div>
+          </a>
+          <a href="about.html">
+            <div class="mobile-nav-choice">关于本站</div>
+          </a>
+          <div class="mobile-nav-bottom">
+            <div class="mobile-nav-bottom-line"></div>
+          </div>
+        </div> -->
+        <!-- <div class="inner-nav">
+          <a href="#">第一页</a>         
+          <a href="#">第二页</a>        
+          <a href="#">第三页</a>    
+        </div> -->
+      </div>
+      <div class="inner-nav">
+        <a href="#">第一页</a>         <a href="#">第二页</a>        
+        <a href="#">第三页</a>    
+      </div>
     </div>
     <!-- home-ins -->
     <div class="home-ins">
@@ -72,26 +106,6 @@
     </div> -->
 
     <!-- 弹出式导航 -->
-    <!-- <div class="mobile-nav">
-      <a href="index.html">
-        <div class="mobile-nav-choice">主页</div>
-      </a>
-      <a href="study-notes.html">
-        <div class="mobile-nav-choice">学习笔记</div>
-      </a>
-      <a href="skills.html">
-        <div class="mobile-nav-choice">专业技能</div>
-      </a>
-      <a href="projects.html">
-        <div class="mobile-nav-choice">项目经历</div>
-      </a>
-      <a href="about.html">
-        <div class="mobile-nav-choice">关于本站</div>
-      </a>
-      <div class="mobile-nav-bottom">
-        <div class="mobile-nav-bottom-line"></div>
-      </div>
-    </div> -->
 
     <!-- <div class="hot"></div> -->
     <!-- bottom -->
