--- a/test.html
+++ b/test.html
@@ -18,7 +18,8 @@
          
       <!--菜单展开项-->
       <div class="inner-nav">
-        <a href="#">第一页</a>         <a href="#">第二页</a>        
+        <a href="#">第一页</a>         
+        <a href="#">第二页</a>        
         <a href="#">第三页</a>    
       </div>
     </div>
