--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="news">
       <div class="news-text">6月12日：小站刚建成，有bug还请多见谅。</div>
     </div>
+    <!-- navigation -->
     <div class="navigation">
       <div class="navigation-content">
         <div class="logo">Hu</div>
@@ -39,42 +40,13 @@
           </a>
         </div>
         <div class="inner-header-icon">
-          <span></span>
-          <span></span>
+          <span> </span>
+          <span> </span>
         </div>
       </div>
+      <div class="dropdown"></div>
 
-      <div class="dropdown">
-        <!-- <div class="mobile-nav">
-          <a href="index.html">
-            <div class="mobile-nav-choice">主页</div>
-          </a>
-          <a href="study-notes.html">
-            <div class="mobile-nav-choice">学习笔记</div>
-          </a>
-          <a href="skills.html">
-            <div class="mobile-nav-choice">专业技能</div>
-          </a>
-          <a href="projects.html">
-            <div class="mobile-nav-choice">项目经历</div>
-          </a>
-          <a href="about.html">
-            <div class="mobile-nav-choice">关于本站</div>
-          </a>
-          <div class="mobile-nav-bottom">
-            <div class="mobile-nav-bottom-line"></div>
-          </div>
-        </div> -->
-        <!-- <div class="inner-nav">
-          <a href="#">第一页</a>         
-          <a href="#">第二页</a>        
-          <a href="#">第三页</a>    
-        </div> -->
-      </div>
-      <div class="inner-nav">
-        <a href="#">第一页</a>         <a href="#">第二页</a>        
-        <a href="#">第三页</a>    
-      </div>
+
     </div>
     <!-- home-ins -->
     <div class="home-ins">
@@ -92,22 +64,6 @@
         </div>
       </div>
     </div>
-    <!-- 标题栏 -->
-    <!-- <div class="navigation">
-      <div class="navigation-content">
-
-        <div class="profile">
-          <div class="profile-pic"></div>
-        </div>
-        <div class="logo logo1">Hu <br />Zanlai</div>
-
-        <div class="mobile-nav-control"></div>
-      </div>
-    </div> -->
-
-    <!-- 弹出式导航 -->
-
-    <!-- <div class="hot"></div> -->
     <!-- bottom -->
     <div class="bottom">
       <div class="bottom-contact">
@@ -117,7 +73,6 @@
       <div class="bottom-line"></div>
       <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
-
     <!-- JavaScript -->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/main.js"></script>
