制作下拉框

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <div class="news">
       <div class="news-text">6月12日：小站刚建成，有bug还请多见谅。</div>
     </div>
+
     <!-- navigation -->
     <div class="navigation">
+      <!-- 横版 -->
       <div class="navigation-content">
         <div class="logo">Hu</div>
         <div class="navigation-choice">
@@ -44,10 +46,17 @@
           <span> </span>
         </div>
       </div>
-      <div class="dropdown"></div>
-
-
+      <!-- 下拉 -->
+      <div class="dropdown">
+        <div class="dropdown-menu">
+          <span></span>
+          <p>123</p>
+          <p>123</p>
+          <p>123</p>
+        </div>
+      </div>
     </div>
+
     <!-- home-ins -->
     <div class="home-ins">
       <div class="ins-content">
@@ -64,6 +73,7 @@
         </div>
       </div>
     </div>
+
     <!-- bottom -->
     <div class="bottom">
       <div class="bottom-contact">
@@ -73,6 +83,7 @@
       <div class="bottom-line"></div>
       <div class="bottom-label">Made with ❤️ by Zanlai.</div>
     </div>
+
     <!-- JavaScript -->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/main.js"></script>
