--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body class="body-style">
     <div class="news">
-      <div class="news-text">6月13日：小站刚建成，有bug还请多见谅。</div>
+      <div class="news-text">更新时间：6月13日，小站刚建成，有bug还请多见谅。</div>
     </div>
 
     <!-- navigation -->
