--- a/study-notes.html
+++ b/study-notes.html
@@ -1,53 +1,81 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
-
-<body class="body-style">
-  <div>
-    <!-- Header -->
+  <body class="body-style">
     <div class="news">
       <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
+        更新时间：6月13日，小站刚建成，有bug还请多见谅。
       </div>
     </div>
 
-    <!-- header -->
-    <div class="navigation navigation-unhome">
-      <div class="navigation-content">
-        <!-- 宇航员 -->
-        <div class="profile">
-          <div class="profile-pic"></div>
-        </div>
-        <!-- 名字 -->
-        <div class="logo logo1">Hu <br />Zanlai</div>
-        <!-- 导航 -->
-        <div class="navigation-choice">
+    <!-- navigation -->
+    <div class="navigation">
+      <!-- 横版 -->
+      <div class="navigation-content navigation-content-unhome">
+        <div class="logo">Hu</div>
+        <div class="navigation-choice navigation-choice-unhome">
           <a href="index.html">
-            <div class="unhome-choice">主页</div>
+            <div class="choice choice-focused">主页</div>
           </a>
           <a href="study-notes.html">
-            <div class="unhome-focused unhome-choice">学习笔记</div>
+            <div class="choice">学习笔记</div>
           </a>
           <a href="skills.html">
-            <div class="unhome-choice">专业技能</div>
+            <div class="choice">专业技能</div>
           </a>
           <a href="projects.html">
-            <div class="unhome-choice">项目经历</div>
+            <div class="choice">项目经历</div>
           </a>
           <a href="about.html">
-            <div class="unhome-choice">关于本站</div>
+            <div class="choice">关于本站</div>
           </a>
-          <!-- github logo -->
           <a href="https://github.com/zanlaihu">
             <div class="github github-black"></div>
           </a>
+        </div>
+        <div class="inner-header-icon inner-header-icon-unhome">
+          <span> </span>
+          <span> </span>
+        </div>
+      </div>
+      <!-- 下拉 -->
+      <div class="dropdown">
+        <div class="dropdown-line"></div>
+        <div class="dropdown-menu dropdown-menu-unhome">
+          <a href="index.html">
+            <p>主页</p>
+          </a>
+          <hr />
+          <a href="study-notes.html">
+            <p>学习笔记</p>
+          </a>
+          <hr />
+          <a href="skills.html">
+            <p>专业技能</p>
+          </a>
+          <hr />
+          <a href="projects.html">
+            <p>项目经历</p>
+          </a>
+          <hr />
+          <a href="about.html">
+            <p>关于本站</p>
+          </a>
+          <hr />
+          <a href="https://github.com/zanlaihu">
+            <p>GitHub</p>
+          </a>
+          <hr />
         </div>
       </div>
     </div>
@@ -95,25 +123,24 @@
       <div class="content-content">
         <h1>JavaScript学习笔记</h1>
         <p>
-          通过《JavaScript高级程序设计》第四版和Mozilla MDN Web Docs进行学习。<br>记录要点和学习心得。
+          通过《JavaScript高级程序设计》第四版和Mozilla MDN Web
+          Docs进行学习。<br />记录要点和学习心得。
         </p>
       </div>
-
-      <div class="bottom unhome-padding">
-        <div class="bottom-contact">
-          <div class="contact-title">联系方式</div>
-          <div class="contact-message">手机：13867908869</div>
-          <div class="contact-message">微信：13867908869</div>
-          <div class="contact-message">邮箱：klaus@outlook.com</div>
-        </div>
-        <div class="bottom-line"></div>
-        <div class="bottom-logo">
-          <div class="profile-pic"></div>
-        </div>
-        <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-      </div>
     </div>
-  </div>
-</body>
 
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaus@outlook.com</div>
+      </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+    </div>
+
+    <!-- JavaScript -->
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
