--- a/study-notes.html
+++ b/study-notes.html
@@ -121,6 +121,11 @@
 
     <div class="right-content">
       <div class="content-content">
+        <h1>学习笔记</h1>
+        <p>目前收录笔记：</p>
+        <p>1. JavaScript</p>
+        <p>2. CSS</p>
+        <p>3. React</p>
         <h1>JavaScript学习笔记</h1>
         <p>
           通过《JavaScript高级程序设计》第四版和Mozilla MDN Web
