--- a/study-notes.html
+++ b/study-notes.html
@@ -50,8 +50,8 @@
       </div>
       <!-- 下拉 -->
       <div class="dropdown">
-        <div class="dropdown-line"></div>
-        <div class="dropdown-menu dropdown-menu-unhome">
+        <div class="dropdown-line dropdown-line-black"></div>
+        <div class="dropdown-menu dropdown-menu-black">
           <a href="index.html">
             <p>主页</p>
           </a>
