--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <div class="logo">Hu</div>
         <div class="navigation-choice">
           <a href="index.html">
-            <div class="choice choice-focused">主页</div>
+            <div class="choice choice-home choice-focused choice-focused-home">主页</div>
           </a>
           <a href="study-notes.html">
-            <div class="choice">学习笔记</div>
+            <div class="choice choice-home">学习笔记</div>
           </a>
           <a href="skills.html">
-            <div class="choice">专业技能</div>
+            <div class="choice choice-home">专业技能</div>
           </a>
           <a href="projects.html">
-            <div class="choice">项目经历</div>
+            <div class="choice choice-home">项目经历</div>
           </a>
           <a href="about.html">
-            <div class="choice">关于本站</div>
+            <div class="choice choice-home">关于本站</div>
           </a>
           <a href="https://github.com/zanlaihu">
             <div class="github github-white"></div>
