--- a/study-notes.html
+++ b/study-notes.html
@@ -25,19 +25,19 @@
         <div class="logo">Hu</div>
         <div class="navigation-choice navigation-choice-unhome">
           <a href="index.html">
-            <div class="choice choice-focused">主页</div>
+            <div class="choice choice-study choice-focused choice-focused-study">主页</div>
           </a>
           <a href="study-notes.html">
-            <div class="choice">学习笔记</div>
+            <div class="choice choice-study">学习笔记</div>
           </a>
           <a href="skills.html">
-            <div class="choice">专业技能</div>
+            <div class="choice choice-study">专业技能</div>
           </a>
           <a href="projects.html">
-            <div class="choice">项目经历</div>
+            <div class="choice choice-study">项目经历</div>
           </a>
           <a href="about.html">
-            <div class="choice">关于本站</div>
+            <div class="choice choice-study">关于本站</div>
           </a>
           <a href="https://github.com/zanlaihu">
             <div class="github github-black"></div>
