--- a/study-notes.html
+++ b/study-notes.html
@@ -25,10 +25,14 @@
         <div class="logo">Hu</div>
         <div class="navigation-choice navigation-choice-unhome">
           <a href="index.html">
-            <div class="choice choice-study choice-focused choice-focused-study">主页</div>
+            <div class="choice choice-study">主页</div>
           </a>
           <a href="study-notes.html">
-            <div class="choice choice-study">学习笔记</div>
+            <div
+              class="choice choice-study choice-focused choice-focused-study"
+            >
+              学习笔记
+            </div>
           </a>
           <a href="skills.html">
             <div class="choice choice-study">专业技能</div>
