[add] 添加目录按钮

--- a/study-notes.html
+++ b/study-notes.html
@@ -20,9 +20,13 @@
 
     <!-- navigation -->
     <div class="navigation">
+      <div class="study-logo">
+        <p>学习笔记</p>
+        <div class="sidebar-icon"></div>
+      </div>
       <!-- 横版 -->
       <div class="navigation-content navigation-content-unhome">
-        <div class="logo">Hu</div>
+        <div class="logo logo-center">Hu</div>
         <div class="navigation-choice navigation-choice-unhome">
           <a href="index.html">
             <div class="choice choice-study">主页</div>
@@ -87,43 +91,44 @@
     <!-- 侧边栏 -->
     <div class="sidebar">
       <!-- JavaScript -->
-      <a href="study-notes.html">
-        <div class="know-name know-name-focus">JavaScript</div>
+      <a>
+        <div class="note-title note-choosen">JavaScript</div>
       </a>
-      <a href="study-notes/JavaScript/js-1.html">
-        <div class="chapter">1 什么是JavaScript</div>
+      <a>
+        <div>1 什么是JavaScript</div>
       </a>
-      <a href="study-notes/JavaScript/js-2.html">
-        <div class="chapter">2 script标签</div>
+      <a>
+        <div>2 script标签</div>
       </a>
-      <a href="study-notes/JavaScript/js-3.html">
-        <div class="chapter">3 语法</div>
+      <a>
+        <div>3 语法</div>
       </a>
-      <a href="study-notes/JavaScript/js-4.html">
-        <div class="chapter">4 var,let,const</div>
+      <a>
+        <div>4 var,let,const</div>
       </a>
-      <a href="study-notes/JavaScript/js-5.html">
-        <div class="chapter">5 数据类型</div>
+      <a>
+        <div>5 数据类型</div>
       </a>
-      <a href="study-notes/JavaScript/js-6.html">
-        <div class="chapter">6 对象</div>
+      <a>
+        <div>6 对象</div>
       </a>
-      <a href="study-notes/JavaScript/js-7.html">
-        <div class="chapter">7 操作符</div>
+      <a>
+        <div>7 操作符</div>
       </a>
-      <a href="study-notes/JavaScript/js-8.html">
-        <div class="chapter">8 语句</div>
+      <a>
+        <div>8 语句</div>
       </a>
       <!-- react -->
-      <a href="study-notes/React/react-outline.html">
-        <div class="know-name">react</div>
+      <a>
+        <div class="note-title">React</div>
       </a>
-      <a href="study-notes/JavaScript/js-1.html">
-        <div class="chapter">1 什么是React</div>
+      <a>
+        <div>1 什么是React</div>
       </a>
     </div>
 
-    <div class="right-content">
+    <div class="note-content"></div>
+    <!-- <div class="right-content">
       <div class="content-content">
         <h1>学习笔记</h1>
         <p>目前收录笔记：</p>
@@ -135,8 +140,28 @@
           通过《JavaScript高级程序设计》第四版和Mozilla MDN Web
           Docs进行学习。<br />记录要点和学习心得。
         </p>
+        <h1>学习笔记</h1>
+        <p>目前收录笔记：</p>
+        <p>1. JavaScript</p>
+        <p>2. CSS</p>
+        <p>3. React</p>
+        <h1>JavaScript学习笔记</h1>
+        <p>
+          通过《JavaScript高级程序设计》第四版和Mozilla MDN Web
+          Docs进行学习。<br />记录要点和学习心得。
+        </p>
+        <h1>学习笔记</h1>
+        <p>目前收录笔记：</p>
+        <p>1. JavaScript</p>
+        <p>2. CSS</p>
+        <p>3. React</p>
+        <h1>JavaScript学习笔记</h1>
+        <p>
+          通过《JavaScript高级程序设计》第四版和Mozilla MDN Web
+          Docs进行学习。<br />记录要点和学习心得。
+        </p>
       </div>
-    </div>
+    </div> -->
 
     <!-- bottom -->
     <div class="bottom">
