--- a/study-notes.html
+++ b/study-notes.html
@@ -88,45 +88,10 @@
       </div>
     </div>
 
-    <!-- 侧边栏 -->
-    <div class="sidebar">
-      <!-- JavaScript -->
-      <a>
-        <div class="note-title note-choosen">JavaScript</div>
-      </a>
-      <a>
-        <div>1 什么是JavaScript</div>
-      </a>
-      <a>
-        <div>2 script标签</div>
-      </a>
-      <a>
-        <div>3 语法</div>
-      </a>
-      <a>
-        <div>4 var,let,const</div>
-      </a>
-      <a>
-        <div>5 数据类型</div>
-      </a>
-      <a>
-        <div>6 对象</div>
-      </a>
-      <a>
-        <div>7 操作符</div>
-      </a>
-      <a>
-        <div>8 语句</div>
-      </a>
-      <!-- react -->
-      <a>
-        <div class="note-title">React</div>
-      </a>
-      <a>
-        <div>1 什么是React</div>
-      </a>
-    </div>
+    <!-- sidebar -->
+    <div class="sidebar"></div>
 
+    <!-- note-content -->
     <div class="note-content"></div>
     <!-- <div class="right-content">
       <div class="content-content">
@@ -176,5 +141,6 @@
     <!-- JavaScript -->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/sidebar.js"></script>
   </body>
 </html>
