--- a/study-notes/React/react.html
+++ b/study-notes/React/react.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1,
 			user-scalable=no"
     />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
 
   <body class="body-style">
@@ -88,7 +88,8 @@
       </div>
     </div>
 
-
+    <!-- sidebar -->
+    <div class="sidebar"></div>
 
     <!-- note-content -->
     <div class="note-content"></div>
@@ -138,7 +139,8 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../../assets/js/main.js"></script>
+    <script src="../../assets/js/sidebar.js"></script>
   </body>
 </html>
