--- a/study-notes.html
+++ b/study-notes.html
@@ -19,11 +19,7 @@
     </div>
 
     <!-- navigation -->
-    <div class="navigation">
-      <div class="study-logo">
-        <p>学习笔记</p>
-        <div class="sidebar-icon"></div>
-      </div>
+    <div class="navigation navigation-shadow">
       <!-- 横版 -->
       <div class="navigation-content navigation-content-unhome">
         <div class="logo logo-center">Hu</div>
@@ -88,44 +84,143 @@
       </div>
     </div>
 
-
-
-    <!-- note-content -->
-    <div class="note-content"></div>
-    <!-- <div class="right-content">
-      <div class="content-content">
-        <h1>学习笔记</h1>
-        <p>目前收录笔记：</p>
-        <p>1. JavaScript</p>
-        <p>2. CSS</p>
-        <p>3. React</p>
-        <h1>JavaScript学习笔记</h1>
-        <p>
-          通过《JavaScript高级程序设计》第四版和Mozilla MDN Web
-          Docs进行学习。<br />记录要点和学习心得。
-        </p>
-        <h1>学习笔记</h1>
-        <p>目前收录笔记：</p>
-        <p>1. JavaScript</p>
-        <p>2. CSS</p>
-        <p>3. React</p>
-        <h1>JavaScript学习笔记</h1>
-        <p>
-          通过《JavaScript高级程序设计》第四版和Mozilla MDN Web
-          Docs进行学习。<br />记录要点和学习心得。
-        </p>
-        <h1>学习笔记</h1>
-        <p>目前收录笔记：</p>
-        <p>1. JavaScript</p>
-        <p>2. CSS</p>
-        <p>3. React</p>
-        <h1>JavaScript学习笔记</h1>
-        <p>
-          通过《JavaScript高级程序设计》第四版和Mozilla MDN Web
-          Docs进行学习。<br />记录要点和学习心得。
-        </p>
+    <!-- full-index -->
+    <div class="full-index">
+      <div class="full-index-title">总目录</div>
+      <div class="full-index-content">
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript2</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript3</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
       </div>
-    </div> -->
+      <div class="full-index-content">
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript2</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript3</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
+      </div>
+      <div class="full-index-content">
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript2</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
+        <div class="single-content">
+          <a><div>JavaScriptJavaScriptJavaScript3</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+          <a><div>JavaScriptJavaScriptJavaScript</div></a>
+        </div>
+      </div>
+
+    </div>
 
     <!-- bottom -->
     <div class="bottom">
