--- a/study-notes.html
+++ b/study-notes.html
@@ -88,6 +88,7 @@
     <div class="full-index">
       <div class="full-index-title">总目录</div>
       <div class="full-index-content">
+        <div class="single-content-title">基础</div>
         <div class="single-content">
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
@@ -132,6 +133,7 @@
         </div>
       </div>
       <div class="full-index-content">
+        <div class="single-content-title">框架</div>
         <div class="single-content">
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
@@ -176,6 +178,7 @@
         </div>
       </div>
       <div class="full-index-content">
+        <div class="single-content-title">网络</div>
         <div class="single-content">
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
           <a><div>JavaScriptJavaScriptJavaScript</div></a>
